# the-internovators

./: .env.example  .gitignore  README.md  debug-instructions.txt  main.py  pyproject.toml  requirements.txt  test_app.py  vercel.json
.github/workflows/: main.yml  mains.yml
SafeWalkersCodeConcept/: package-lock.json
SafeWalkersCodeConcept/SafeWalkersCodeConcept/: index.html
api/: auth.py  community.py  reports.py  router.py  routes.py  users.py
core/: config.py  dependencies.py  security.py
data/: crime_polygons.geojson  follows.json  generated_routes.json  route_comments.json  sample_routes.json  saved_routes.json  users.json
docs/: architecture.md  contributing.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: assets.ts  (+2 more)
maps/: filenames.db
repositories/: __init__.py  follows_json.py  generated_routes_json.py  json_store.py  reports_json.py  route_comments_json.py  saved_routes_json.py  users_json.py
safewalkers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
schemas/: community.py  report.py  route.py  user.py
services/: __init__.py  autocomplete.py  community.py  geocoding.py  points_of_interest.py  route_catalog.py  route_planner.py  safety_scoring.py
static/css/: main.css
static/js/: app.js  route_search.js
templates/: about.html  base.html  generate.html  home.html  index.html  login.html  profile.html  route_detail.html  route_gallery.html  route_results.html  saved_routes.html  signup.html  social.html  verify_email.html
web/: __init__.py  pages.py
(+41 files in other folders)
