[project]
name = "safewalkers"
version = "0.1.0"
description = "Austin walking route prototype built with FastAPI and Jinja."
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "mapbox-vector-tile>=2.1.0",
  "pyproj>=3.6.0",
  "requests>=2.32.0",
  "shapely>=2.0.0",
  "staticmap>=0.5.7",
]

[tool.setuptools]
packages = ["api", "core", "repositories", "schemas", "services", "web"]

[tool.ruff]
line-length = 88
